# JP-Proper-Noun-Dictionary

./: Proper Nouns.txt  README.md  data_process.py  output.json  pyproject.toml
dict/: index.json  tag_bank_1.json  term_bank_1.json
