[tool.poetry]
name = "proper-noun-dict"
version = "0.1.0"
description = "Yomitan dictionary of proper nouns"
authors = ["Joshua L"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
